--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Dec 14 22:14:44 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.c (estimate_probability): Fix LOOP_EXIT heuristic.
+
 2001-12-14  Zack Weinberg  <zack@codesourcery.com>
 
 	* combine.c (record_dead_and_set_regs): Use
