--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2001-12-14  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (h8300_handle_eightbit_data_attribute):
+	Remove the initialization requierment.
+	(h8300_handle_tiny_data_attribute): Likewise.
+
+2001-12-14  Kazu Hirata  <kazu@hxi.com>
+
 	* config/h8300/h8300.md (udivqi3): Remove.
 	(divqi3): Likewise.
 	(udivhi3): Likewise.
