--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -909,7 +909,7 @@
 
 (define_insn ""
   [(set (match_operand:SI 0 "register_operand" "=a")
-	(plus (mult:SI
+	(plus:SI (mult:SI
 	  (sign_extend:SI (mem:HI
 	    (post_inc:SI (match_operand:SI 1 "register_operand" "r"))))
 	  (sign_extend:SI (mem:HI
