* regrename.c (mode_change_ok): New.         (find_oldest_value_reg): Use it.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48029 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-14  Richard Henderson  <rth@redhat.com>
 
+	* regrename.c (mode_change_ok): New.
+	(find_oldest_value_reg): Use it.
+
+2001-12-14  Richard Henderson  <rth@redhat.com>
+
 	* regrename.c (struct value_data): Add max_value_regs.
 	(init_value_data): Initialize it.
 	(kill_value): Kill values that overlap the dying register.
