--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-14  Richard Henderson  <rth@redhat.com>
 
+	* config/ia64/ia64.c (spill_restore_mem): Mark iterator 
+	initialization as possibly dead.
+
+2001-12-14  Richard Henderson  <rth@redhat.com>
+
 	* regrename.c (mode_change_ok): New.
 	(find_oldest_value_reg): Use it.
 
