* testsuite/gcc.dg/20011214-1.c: New.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@48031 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-14  Aldy Hernandez  <aldyh@redhat.com>
+
+	* testsuite/gcc.dg/20011214-1.c: New.
+
 2001-12-13  Aldy Hernandez  <aldyh@redhat.com>
 
 	* gcc.dg/altivec-4.c: New.
