--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2001-12-14  Aldy Hernandez  <aldyh@redhat.com>
+
+	* c-parse.in (typename): Do not split attributes.
+        Remove unsupported attributes warning.
+
+        * c-decl.c (groktypename): Apply attributes.
+
 2001-12-14  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/ia64.c (spill_restore_mem): Mark iterator 
