--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sat Dec 15 14:13:03 CET 2001  Jan Hubicka  <jh@suse.cz>
+
+	* predict.def (PRED_NORETURN, PRED_OPCODE_POSITIVE, PRED_OPCODE_NONEQUAL,
+	PRED_ERROR_RETURN): Make probabilities match reality.
+
 2001-12-15  Jakub Jelinek  <jakub@redhat.com>
 
 	* configure.in: Check for ld.
