--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-15  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm/unknown-elf.h (CPP_PREDEFINES): Add a suitable default.
+
 2001-12-15  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* regrename.c (copyprop_hardreg_forward): Do not keep register
